--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@ import("methods")
 import("tsmethods")
 import("data.table")
 importFrom("utils", "head","tail","setTxtProgressBar", "txtProgressBar")
-importFrom("tsaux","do.call.fast","box_cox","check_xreg","check_newxreg","mape","mslre","mase","bias","mis","future_dates","sampling_frequency","fourier_series")
+importFrom("tsaux","do.call.fast","box_cox","check_xreg","check_newxreg","mape","mslre","mase","bias","mis","future_dates","sampling_frequency","fourier_series","crps")
 importFrom("stats","median","na.omit","fitted","coef","quantile","residuals","predict","as.formula","rpois","runif","rnorm", "acf", "optim", "qnorm", "sd","simulate","arima.sim",
            "diffinv", "ts", "tsp", "tsp<-","na.contiguous","var","alias", "deviance", "df.residual", "formula", 
-           "hat", "lm", "model.matrix", "pchisq", "pf", "vcov", "weights","logLik","pnorm","frequency", "window")
+           "hat", "lm", "model.matrix", "pchisq", "pf", "vcov", "weights","logLik","pnorm","frequency", "window","dnorm")
 importFrom("zoo","index","as.zoo","zoo","coredata","na.locf","na.fill")
 importFrom("grDevices", "n2mfrow")
 importFrom("dlm", "dlmModARMA","dlmModTrig","dlmModSeas","dlmModPoly","dlm","dlmFilter","dlmSmooth","dlmForecast")
@@ -44,3 +44,5 @@ S3method("tsbacktest","arima.spec")
 S3method("tsconvert","bsts.estimate")
 S3method("tsmetrics","arima.estimate")
 S3method("tsmetrics","bsts.estimate")
+S3method("tsmetrics","arima.predict")
+S3method("tsmetrics","bsts.predict")
