--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tsforeign
 Type: Package
 Title: Interface To Other Packages
-Version: 0.2.3
+Version: 0.2.4
 Authors@R: c(person("Alexios", "Galanos", role = c("aut", "cre"),
     email = "alexios@4dscape.com"),
     person("James","Nesbit",role="ctb",
@@ -10,10 +10,11 @@ Authors@R: c(person("Alexios", "Galanos", role = c("aut", "cre"),
     email="kth.ohr@gmail.com"))
 Maintainer: alexios galanos <alexios@4dscape.com>
 Description: Wrappers for models in other packages to conform to the unified time series framework.
-License: GPL-2
+License: GPL-2 | file LICENSE
 SystemRequirements: C++11, GNU make
 Depends: R (>= 3.5.0), Rcpp (>= 0.12.9), tsmethods
 LinkingTo: Rcpp (>= 0.12.9), RcppArmadillo, RcppDist
-Imports: methods, zoo, xts, data.table, bsts, tools, tsaux, forecast, mvtnorm, dlm, coda, foreach, doParallel, doSNOW, snow, KFAS
+Imports: methods, zoo, xts, data.table, bsts, tools, tsaux, forecast, mvtnorm, dlm, coda, future, future.apply, progressr
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.0
