--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,4 @@ Imports: methods, zoo, xts, data.table, bsts, tools, tsaux, forecast, mvtnorm, d
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
+Remotes: tsmodels/tsmethods, tsmodels/tsaux
